--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,10 +1,25 @@
 <html lang="ru">
 <head>
     <title>Boilerplate</title>
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-<include>_header.html</include>
-<div class="grid-row">
+<!-- <include>_header.html</include> -->
+<include>_hero.html</include> 
+<include>_texto-apoio.html</include>
+<include>_formulario.html</include>
+<include>_info-curso.html</include>
+
+
+
+<!-- <div class="grid-row">
     <div class="grid-col--5">
         <div class="cat">
             <img src="assets/img/cat.jpg" width="100" alt="">
@@ -12,8 +27,8 @@
             <div class="cat__title">Cat</div>
         </div>
     </div>
-</div>
-<a href="products.html">products.html</a>
-<include>_footer.html</include>
+</div> -->
+<!-- <a href="products.html">products.html</a>
+<include>_footer.html</include> -->
 </body>
 </html>
